--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
+    "react-advanced-form": "^1.6.7",
+    "react-advanced-form-addons": "^1.3.3",
     "react-app-polyfill": "^0.2.2",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.5",
+    "react-drag-drawer": "^3.3.0",
     "react-icons": "^3.5.0",
+    "react-responsive-modal": "^3.6.0",
     "react-router-config": "^4.4.0-beta.8",
     "react-router-dom": "~4.3.1",
     "react-test-renderer": "^16.8.5",
