--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "~2.1.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
@@ -40,7 +43,9 @@
     "react-router-dom": "~4.3.1",
     "react-test-renderer": "^16.8.5",
     "reactstrap": "^7.1.0",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert-react": "^0.4.11"
   },
   "devDependencies": {
     "react-scripts": "^2.1.8"
