--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-advanced-form": "^1.6.7",
     "react-advanced-form-addons": "^1.3.3",
     "react-app-polyfill": "^0.2.2",
+    "react-autocomplete": "^1.8.1",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.5",
     "react-drag-drawer": "^3.3.0",
