--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "core-js": "^2.6.5",
+    "cors": "^2.8.5",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "flag-icon-css": "^3.3.0",
