--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookie-parser": "^1.4.4",
     "core-js": "^2.6.5",
     "cors": "^2.8.5",
+    "decision-tree": "^0.3.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "flag-icon-css": "^3.3.0",
@@ -42,6 +43,7 @@
     "react-advanced-form": "^1.6.7",
     "react-advanced-form-addons": "^1.3.3",
     "react-app-polyfill": "^0.2.2",
+    "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.5",
@@ -51,7 +53,6 @@
     "react-responsive-modal": "^3.6.0",
     "react-router-config": "^4.4.0-beta.8",
     "react-router-dom": "~4.3.1",
-    "react-autocomplete": "^1.8.1",	
     "react-test-renderer": "^16.8.5",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
