--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "react-dom": "^16.8.5",
     "react-drag-drawer": "^3.3.0",
     "react-icons": "^3.5.0",
+    "react-loading-screen": "0.0.17",
+    "react-notifications": "^1.4.3",
     "react-redux": "^7.0.2",
     "react-responsive-modal": "^3.6.0",
     "react-router-config": "^4.4.0-beta.8",
