--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.5",
     "react-drag-drawer": "^3.3.0",
+    "react-file-base64": "^1.0.3",
     "react-icons": "^3.5.0",
     "react-responsive-modal": "^3.6.0",
     "react-router-config": "^4.4.0-beta.8",
