--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.3.1",
+    "brain": "^1.0.0",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.4",
