--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "mongoose": "^5.5.3",
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
@@ -52,6 +54,7 @@
     "react-file-base64": "^1.0.3",
     "react-icons": "^3.5.0",
     "react-loading-screen": "0.0.17",
+    "react-moment": "^0.9.2",
     "react-notifications": "^1.4.3",
     "react-redux": "^7.0.2",
     "react-responsive-modal": "^3.6.0",
