adding med's work

--- a/package.json
+++ b/package.json
@@ -42,16 +42,17 @@
     "react-advanced-form": "^1.6.7",
     "react-advanced-form-addons": "^1.3.3",
     "react-app-polyfill": "^0.2.2",
+    "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.5",
     "react-drag-drawer": "^3.3.0",
     "react-icons": "^3.5.0",
+    "react-loading-overlay": "^1.0.1",
     "react-redux": "^7.0.2",
     "react-responsive-modal": "^3.6.0",
     "react-router-config": "^4.4.0-beta.8",
     "react-router-dom": "~4.3.1",
-    "react-autocomplete": "^1.8.1",	
     "react-test-renderer": "^16.8.5",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
